--- a/foliac/css/style.css
+++ b/foliac/css/style.css
@@ -2,7 +2,6 @@
     font-family: BigJohn;
     src: url("../fonts/BigJohn.otf") format('otf');
 }
-
 @font-face {
     font-family: SlimJoe;
     src: url("../fonts/Slim+Joe.otf") format('otf');
@@ -12,6 +11,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Lato, Arial, sans-serif;
+}
+
+img {
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 100%;
 }
 
 ul {
@@ -29,23 +36,62 @@ ul {
     padding-right: 20%;
 }
 
+.hexagon {
+    width: 48px;
+    height: 24px;
+    background: #55abed;
+    position: relative;
+}
+.hexagon:before {
+    content: "";
+    position: absolute;
+    top: -12px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 24px solid transparent;
+    border-right: 24px solid transparent;
+    border-bottom: 12px solid #55abed;
+}
+.hexagon:after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 24px solid transparent;
+    border-right: 24px solid transparent;
+    border-top: 12px solid #55abed;
+}
+
+
+/**
+* Header
+*/
+
 header {
     padding-top: 30px;
     padding-bottom: 180px;
     text-align: center;
     background: #3c4955 url("../img/computer.png");
+    background-size: 100% 100%;
     color: white;
 }
 
+header nav {
+    margin-bottom: 150px;
+}
+
 header h1 {
-    margin: 150px 0 0;
+    margin-bottom: 25px;
     text-transform: uppercase;
     font-family: BigJohn, Arial, sans-serif;
     font-size: 46px;
 }
 
 header p {
-    margin-top: 25px;
+    margin-bottom: 40px;
     text-transform: uppercase;
     font-family: SlimJoe, Arial, sans-serif;
     font-size: 30px;
@@ -59,25 +105,20 @@ header ul {
     float: right;
     padding-top: 50px;
 }
-
 header ul li {
     display: inline-block;
 }
-
 header ul li a {
     color: white;
     text-decoration: none;
 }
-
 header ul li span {
     margin: 0 25px;
 }
 
 header button {
-    margin-top: 40px;
-    padding: 3px 10px;
+    padding: 9px 19px;
     text-transform: uppercase;
-    font-family: Lato, Arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
     color: #48bf72;
@@ -86,111 +127,300 @@ header button {
     background-color: transparent;
 }
 
-section.filters {
+
+/**
+* Section portfolio
+*/
+
+section.portfolio {
     padding-top: 90px;
     padding-bottom: 95px;
     text-align: center;
 }
 
-section.filters ul li {
+section.portfolio ul {
+    margin-bottom: 50px;
+}
+section.portfolio ul li {
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
 }
-
-section.filters ul li button {
+section.portfolio ul li button {
     padding: 5px 10px;
-    font-family: Lato, Arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     color: #48545f;
     background-color: #eaeaea;
 }
-
-section.filters ul li button:hover {
+section.portfolio ul li button:hover {
     color: white;
     background-color: #48bf72;
 }
 
-section.filters .filters-images {
-    margin-top: 25px;
-}
-
-section.filters .row {
-    margin-bottom: 15px;
-}
-
-section.filters .filters-images .img-wrapper {
+section.portfolio .img-wrapper {
     position: relative;
-    margin-top: 10px;
     float: left;
-    /*max-height: 345px;*/
-    /*overflow: hidden;*/
-    border-radius: 5px;
+    margin-bottom: 30px;
+    height: 305px;
+    overflow: hidden;
+    border-radius: 10px;
 }
-
-section.filters .filters-images .img-wrapper.small {
-    width: 39%;
+section.portfolio .img-wrapper.small {
+    width: 40%;
 }
-section.filters .filters-images .img-wrapper.big {
-    width: 59%;
+section.portfolio .img-wrapper.big {
+    width: calc(60% - 30px);
 }
-
-section.filters .filters-images .img-wrapper:first-child {
-    /*margin-right: 2%;*/
+section.portfolio .img-wrapper:first-child {
+    margin-right: 30px;
 }
-
-section.filters .filters-images .img-wrapper:hover .cover {
-    display: block;
-}
-
-section.filters .cover {
-    display: none;
+section.portfolio .img-wrapper img {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    font-family: Lato, Arial, sans-serif;
-    color: white;
-    background-color: rgba(72, 191, 114, 0.85);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    min-height: 100%;
 }
 
-section.filters .cover div {
+section.portfolio .img-wrapper .cover {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(72,191,114, 0.8);
+    opacity: 0;
+}
+section.portfolio .img-wrapper .cover:hover {
+    opacity: 1;
+}
+section.portfolio .img-wrapper .cover div {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    color: white;
 }
-
-section.filters .cover h4 {
+section.portfolio .img-wrapper .cover h4 {
     font-weight: bold;
     font-size: 30px;
 }
-section.filters .cover p {
-    font-weight: normal;
-    font-size: 14px;
+section.portfolio .img-wrapper .cover p {
+    font-size: 16px;
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-end;
-    align-content: flex-start;
+
+/**
+* Section about
+*/
+
+section.about {
+    padding-top: 85px;
+    padding-bottom: 85px;
+    background: #3c4955 url('../img/men-computer.png');
+    background-position-x: 50%;
+    background-position-y: 45%;
+    color: white;
 }
 
-.flex-image {
-    display: flex;
+section.about div {
+    float: right;
     width: 50%;
 }
 
-img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
+section.about h3 {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 32px;
+}
+section.about p:first-of-type {
+    margin-bottom: 40px;
+    font-size: 22px;
+}
+section.about p:last-of-type {
+    margin-bottom: 33px;
+    font-size: 16px;
+    line-height: 25px;
+}
+section.about button {
+    padding: 9px 19px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    color: #3c4955;
+    border: 2px solid #3c4955;
+    border-radius: 3px;
+    background-color: transparent;
 }
 
+
+/**
+* Section contact
+*/
+
+section.contact {
+    padding-top: 45px;
+    padding-bottom: 50px;
+}
+
+section.contact h3{
+    margin-bottom: 50px;
+    text-align: center;
+    font-family: BigJohn, Arial, sans-serif;
+    font-size: 26px;
+    text-transform: uppercase;
+    color: #48bf72;
+}
+
+section.contact form {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section.contact form .row{
+    margin-bottom: 30px;
+}
+section.contact form .row .input-wrapper:first-child {
+    float: left;
+    width: 48%;
+}
+section.contact form .row .input-wrapper:last-child {
+    float: right;
+    width: 48%;
+}
+
+section.contact .input-wrapper {
+    position: relative;
+}
+
+section.contact .input-wrapper .input-icon{
+    position: absolute;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background-color: #3c4955;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+section.contact .input-wrapper .input-icon:after{
+    content: "";
+    display: block;
+    position: absolute;
+    right: -10px;
+    top: 20px;
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left-color: #3c4955;
+}
+section.contact .input-wrapper .input-icon.user{
+    background-image: url("../img/user.png");
+}
+section.contact .input-wrapper .input-icon.mail{
+    background-image: url("../img/mail.png");
+}
+section.contact .input-wrapper .input-icon.crayon{
+    background-image: url("../img/crayon.png");
+    background-position: center 20px;
+}
+
+section.contact .input-wrapper input,
+section.contact .input-wrapper textarea {
+    display: block;
+    width: 100%;
+    padding-left: 70px;
+    font-size: 16px;
+    line-height: 25px;
+    border-radius: 3px;
+    background-color: #f1f1f1;
+    border: 2px solid #3b4955;
+}
+section.contact .input-wrapper input {
+    height: 50px;
+}
+section.contact .input-wrapper textarea{
+    padding-top: 10px;
+    resize: none;
+}
+section.contact button {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 25px;
+    letter-spacing: 3px;
+    color: white;
+    text-transform: uppercase;
+    background-color: #48bf72;
+}
+
+
+/**
+* Footer
+*/
+
+footer {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background-color: #3c4955;
+}
+
+footer p {
+    float: left;
+    color: white;
+    font-size: 16px;
+    line-height: 25px;
+}
+
+footer ul {
+    float: right;
+}
+footer ul li {
+    display: inline-block;
+    margin-right: 35px;
+}
+footer ul li:last-child {
+    margin-right: 0;
+}
+
+footer .hexagon {
+    background-repeat: no-repeat;
+    background-position: center;
+}
+footer .hexagon.twitter {
+    background-image: url("../img/twitter.png");
+}
+footer .hexagon.linkedin {
+    background-image: url("../img/linkedin.png");
+    background-color: #0975b3;
+}
+footer .hexagon.linkedin:before {
+    border-bottom-color: #0975b3;
+}
+footer .hexagon.linkedin:after {
+    border-top-color: #0975b3;
+}
+footer .hexagon.behance {
+    background-image: url("../img/behance.png");
+    background-color: #1769ff;
+}
+footer .hexagon.behance:before {
+    border-bottom-color: #1769ff;
+}
+footer .hexagon.behance:after {
+    border-top-color: #1769ff;
+}
+footer .hexagon.dribble {
+    background-image: url("../img/dribbble.png");
+    background-color: #e94b89;
+}
+footer .hexagon.dribble:before {
+    border-bottom-color: #e94b89;
+}
+footer .hexagon.dribble:after {
+    border-top-color: #e94b89;
+}
 
 
 
