--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -4,6 +4,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: Raleway, Arial, sans-serif;
 }
 
 a {
@@ -52,7 +53,6 @@ section.fresh-life {
             display: inline-block;
 
             a {
-                font-family: Raleway, Arial, sans-serif;
                 font-size: 16px;
                 font-weight: bold;
                 text-transform: uppercase;
@@ -63,7 +63,7 @@ section.fresh-life {
 
     .content {
         max-width: 370px;
-        font-family: Raleway, Arial, sans-serif;
+
         color: $text-color;
 
         h2 {
@@ -107,6 +107,67 @@ section.about {
             h2 {
 
             }
+        }
+    }
+}
+
+section.services {
+    background: #70bfff url("../img/bg-services.png") no-repeat 85% center;
+    background-size: contain;
+    color: white;
+    padding-top: 180px;
+    padding-bottom: 180px;
+
+    .container {
+        @include flexbox();
+        @include align-items(center);
+        @include justify-content(space-between);
+
+        .services-button {
+            width: 400px;
+            height: 100px;
+            margin-bottom: 20px;
+            background-color: white;
+            text-align: center;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &:hover {
+                box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
+            }
+
+            a {
+                @include flexbox();
+                @include align-items(center);
+                @include justify-content(space-between);
+                width: 100%;
+                height: 100%;
+                padding-left: 25px;
+                padding-right: 25px;
+
+                span {
+                    display: block;
+                    font-size: 20px;
+                    font-weight: bold;
+                    text-align: center;
+                    width: 350px;
+                }
+
+                img {
+                    display: block;
+                    width: 50px;
+                }
+            }
+
+        }
+
+        h2 {
+            margin-top: 0;
+            margin-bottom: 80px;
+            font-size: 90px;
+            font-weight: bold;
         }
     }
 }
