--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -15,6 +15,17 @@ ul {
     list-style: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
 .clearfix:after {
     content: '';
     display: table;
@@ -22,41 +33,49 @@ ul {
 }
 
 .container {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
 }
 
 section.fresh-life {
-    $text-color: #262626;
-
     position: relative;
-    height: 100vh;
-    padding-top: 55px;
+    min-height: 100vh;
+    padding-top: 50px;
     padding-bottom: 110px;
     background: #f9f8fb url("../img/bg-fresh-life.png") no-repeat center;
     background-size: cover;
 
-    h1 {
-        float: left;
+    nav {
+         margin-bottom: 15%;
 
-        a {
-            font-family: Pacifico;
-            font-size: 50px;
-            color: $text-color;
-        }
-    }
-
-    ul {
-        float: right;
-
-        li {
-            display: inline-block;
+        h1 {
+            float: left;
 
             a {
-                font-size: 16px;
-                font-weight: bold;
-                text-transform: uppercase;
-                color: $text-color;
+                font-family: Pacifico;
+                font-size: 50px;
+                color: $text-color-dark;
+            }
+        }
+
+        ul {
+            float: right;
+            margin-top: 20px;
+
+            li {
+                display: inline-block;
+                margin-right: 35px;
+
+                &:last-child {
+                    margin-right: 0;
+                }
+
+                a {
+                    font-size: 16px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    color: $text-color-dark;
+                }
             }
         }
     }
@@ -64,7 +83,7 @@ section.fresh-life {
     .content {
         max-width: 370px;
 
-        color: $text-color;
+        color: $text-color-dark;
 
         h2 {
             font-size: 60px;
@@ -79,7 +98,13 @@ section.fresh-life {
         }
 
         button {
+            padding: 16px 25px;
             font-size: 20px;
+            font-weight: 300;
+            border: none;
+            color: white;
+            box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+            background-color: #ff5f33;
         }
     }
 
@@ -93,30 +118,39 @@ section.fresh-life {
 }
 
 section.about {
-    background: #00b2b2 url("../img/bg-about.png") no-repeat 15% center;
+    background: #00b2b2 url("../img/bg-about.png") no-repeat 10% center;
     background-size: contain;
     color: white;
-    padding-top: 180px;
-    padding-bottom: 235px;
 
     .container {
         .content {
             float: right;
             max-width: 500px;
+            margin-top: 175px;
+            margin-bottom: 175px;
 
             h2 {
+                font-size: 90px;
+                font-weight: bold;
+                margin-bottom: 30px;
+            }
 
+            p {
+                font-size: 17px;
+                line-height: 27px;
+                font-weight: 300;
+                margin-bottom: 20px;
             }
         }
     }
 }
 
 section.services {
-    background: #70bfff url("../img/bg-services.png") no-repeat 85% center;
+    background: #70bfff url("../img/bg-services.png") no-repeat 90% center;
     background-size: contain;
     color: white;
-    padding-top: 180px;
-    padding-bottom: 180px;
+    padding-top: 175px;
+    padding-bottom: 145px;
 
     .container {
         @include flexbox();
@@ -139,25 +173,31 @@ section.services {
             }
 
             a {
-                @include flexbox();
-                @include align-items(center);
-                @include justify-content(space-between);
+                display: table;
                 width: 100%;
                 height: 100%;
-                padding-left: 25px;
-                padding-right: 25px;
 
-                span {
-                    display: block;
+                p {
+                    display: table-cell;
+                    vertical-align: middle;
+                    width: 75%;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    text-align: center;
                     font-size: 20px;
                     font-weight: bold;
-                    text-align: center;
-                    width: 350px;
+                    color: $text-color-dark;
+                    border-right: 1px solid #9d9d9d;
                 }
 
-                img {
-                    display: block;
-                    width: 50px;
+                .image-wrapper {
+                    display: table-cell;
+                    vertical-align: middle;
+                    width: 25%;
+
+                    img {
+                        width: 50px;
+                    }
                 }
             }
 
@@ -171,4 +211,6 @@ section.services {
         }
     }
 }
+
+
 
