--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -212,5 +212,116 @@ section.services {
     }
 }
 
+section.gallery {
+    padding-top: 95px;
+    padding-bottom: 115px;
+    text-align: center;
+    background-color: #ffe92f;
 
+    h2 {
+        margin-bottom: 40px;
+        font-size: 90px;
+        font-weight: bold;
+        color: $text-color-dark;
+    }
+
+    p {
+        max-width: 600px;
+        margin: 0 auto;
+        font-size: 17px;
+        line-height: 27px;
+        font-weight: 300;
+        color: $text-color-dark;
+    }
+
+    button {
+        padding: 0 40px;
+        text-transform: uppercase;
+        font-size: 20px;
+        line-height: 55px;
+        font-weight: 300;
+        color: white;
+        border: none;
+        box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+        background-color: #5585a1;
+    }
+}
+
+section.subscribe {
+    padding-top: 140px;
+    padding-bottom: 160px;
+    background: white url("../img/bg-subscribe.png") no-repeat center;
+
+    h3 {
+        font-size: 40px;
+        font-weight: bold;
+        color: $text-color-dark;
+    }
+
+    p {
+        max-width: 540px;
+        font-size: 17px;
+        line-height: 27px;
+        font-weight: 300;
+        color: $text-color-dark;
+    }
+
+    input {
+
+    }
+
+    button {
+
+    }
+}
+
+footer {
+    color: #b9b9b9;
+    background: #252525;
+
+    p {
+        font-size: 16px;
+        line-height: 25px;
+
+        span {
+            color: #ff2b58;
+        }
+
+        &.logo {
+            font-family: Pacifico;
+            font-size: 25px;
+        }
+    }
+}
+
+.ba-grid > [class*="ba-width-"]{
+    float: left;
+    padding-left: 20px;
+}
+
+.ba-grid{
+    margin-left: -20px;
+}
+
+.ba-grid:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.ba-grid + .ba-grid {
+    margin-top: 20px;
+}
+[class*="ba-width-"] {
+    width: 100%;
+}
+.ba-width-1-2{
+    width: 50%;
+}
+.ba-width-1-3{
+    width: 33.33333%;
+}
+.ba-width-2-3{
+    width: 66.66666%;
+}
 
