--- a/cahee/sass/mixin.scss
+++ b/cahee/sass/mixin.scss
@@ -56,3 +56,59 @@
     }
     align-self: $value;
 }
+
+@mixin placeholder {
+    &::-webkit-input-placeholder {@content}
+    &:-moz-placeholder           {@content}
+    &::-moz-placeholder          {@content}
+    &:-ms-input-placeholder      {@content}
+}
+
+@mixin grid($gutter: 10px) {
+    $vertical-gutter: 2 * $gutter;
+
+    .my-grid-container {
+        padding-left: $gutter;
+        padding-right: $gutter;
+
+        .my-grid-row{
+            margin-left: -$gutter;
+            margin-right: -$gutter;
+
+            & + .my-grid-row {
+                margin-top: $vertical-gutter;
+            }
+
+            & > [class*="my-grid-cell-"]{
+                float: left;
+                padding-left: $gutter;
+                padding-right: $gutter;
+            }
+
+            &:after {
+                content: "";
+                display: table;
+                clear: both;
+            }
+        }
+
+        [class*="my-grid-cell-"] {
+            width: 100%;
+        }
+
+        .my-grid-cell-1-1{
+            width: 100%;
+        }
+        .my-grid-cell-1-2{
+            width: 50%;
+        }
+        .my-grid-cell-1-3{
+            width: 33.33333%;
+        }
+
+        .my-grid-cell-2-3{
+            width: 66.66666%;
+        }
+    }
+}
+
