--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -15,7 +15,7 @@ ul {
     list-style: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p{
     margin: 0;
     padding: 0;
 }
@@ -33,9 +33,11 @@ img {
 }
 
 .container {
-    width: 80%;
+    width: $container-width;
     margin: 0 auto;
 }
+
+@include grid();
 
 section.fresh-life {
     position: relative;
@@ -64,10 +66,16 @@ section.fresh-life {
 
             li {
                 display: inline-block;
+                padding-top: 7px;
                 margin-right: 35px;
+                border-top: 2px solid transparent;
 
                 &:last-child {
                     margin-right: 0;
+                }
+
+                &:hover {
+                    border-top-color: #ff5f33;
                 }
 
                 a {
@@ -102,9 +110,12 @@ section.fresh-life {
             font-size: 20px;
             font-weight: 300;
             border: none;
-            color: white;
-            box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+            color: $text-color-light;
             background-color: #ff5f33;
+
+            &:hover {
+                box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+            }
         }
     }
 
@@ -118,9 +129,9 @@ section.fresh-life {
 }
 
 section.about {
-    background: #00b2b2 url("../img/bg-about.png") no-repeat 10% center;
+    background: #00b2b2 url("../img/bg-about.png") no-repeat $side-gap center;
     background-size: contain;
-    color: white;
+    color: $text-color-light;
 
     .container {
         .content {
@@ -146,9 +157,9 @@ section.about {
 }
 
 section.services {
-    background: #70bfff url("../img/bg-services.png") no-repeat 90% center;
+    background: #70bfff url("../img/bg-services.png") no-repeat 100% - $side-gap center;
     background-size: contain;
-    color: white;
+    color: $text-color-light;
     padding-top: 175px;
     padding-bottom: 145px;
 
@@ -223,6 +234,10 @@ section.gallery {
         font-size: 90px;
         font-weight: bold;
         color: $text-color-dark;
+
+        & + p {
+            margin-bottom: 45px;
+        }
     }
 
     p {
@@ -240,26 +255,50 @@ section.gallery {
         font-size: 20px;
         line-height: 55px;
         font-weight: 300;
-        color: white;
+        color: $text-color-light;
         border: none;
-        box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
         background-color: #5585a1;
+
+        &:hover{
+            box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+        }
+    }
+
+    .my-grid-container {
+        margin-bottom: 50px;
+
+        .small-grid {
+            .my-grid-row + .my-grid-row {
+                margin-top: 25px;
+            }
+        }
+
+        img {
+            width: 100%;
+        }
     }
 }
 
 section.subscribe {
+    $text-width: 540px;
+
     padding-top: 140px;
     padding-bottom: 160px;
     background: white url("../img/bg-subscribe.png") no-repeat center;
 
     h3 {
+        margin-bottom: 35px;
         font-size: 40px;
         font-weight: bold;
         color: $text-color-dark;
+
+        & + p {
+            margin-bottom: 25px;
+        }
     }
 
     p {
-        max-width: 540px;
+        max-width: $text-width;
         font-size: 17px;
         line-height: 27px;
         font-weight: 300;
@@ -267,11 +306,128 @@ section.subscribe {
     }
 
     input {
+        float: left;
+        width: 100%;
+        max-width: $text-width;
+        margin-right: 30px;
+        padding: 0 12px;
+        font-size: 15px;
+        font-weight: 300;
+        color: $text-color-dark;
+        border: 1px solid #252525;
+        line-height: 53px;
 
+        @include placeholder {
+            font-size: 15px;
+            font-weight: 300;
+            color: $text-color-dark;
+        }
     }
 
     button {
+        float: left;
+        padding: 0 30px;
+        font-size: 20px;
+        line-height: 55px;
+        font-weight: 300;
+        background-color: #95b92b;
+        text-transform: uppercase;
+        color: $text-color-light;
+        border: none;
 
+        &:hover {
+            box-shadow: 0px 2px 5px rgba(0,0,0,0.5)
+        }
+    }
+}
+
+section.blog {
+    padding-top: 95px;
+    padding-bottom: 115px;
+    text-align: center;
+    background-color: #b07cf7;
+
+    h2 {
+        margin-bottom: 40px;
+        font-size: 90px;
+        font-weight: bold;
+        color: $text-color-light;
+
+        & + p {
+            margin-bottom: 45px;
+        }
+    }
+
+    p {
+        max-width: 600px;
+        margin: 0 auto;
+        font-size: 17px;
+        line-height: 27px;
+        font-weight: 300;
+        color: $text-color-light;
+    }
+
+    button {
+        padding: 0 40px;
+        text-transform: uppercase;
+        font-size: 20px;
+        line-height: 55px;
+        font-weight: 300;
+        color: $text-color-light;
+        border: none;
+        background-color: #f72b3b;
+
+        &:hover {
+            box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+        }
+    }
+
+    .my-grid-container {
+        margin-bottom: 50px;
+
+        .blog-image-wrapper {
+            position: relative;
+            height: 305px;
+            overflow: hidden;
+            color: $text-color-light;
+            box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
+            background-color: #fbfbf7;
+
+            img {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                max-width: none;
+            }
+
+            .date {
+                position: absolute;
+                top: 40px;
+                left: 25px;
+                padding: 5px;
+                font-size: 32px;
+                font-weight: bold;
+                border-radius: 5px;
+                background-color: rgba(37, 37, 37, 0.5);
+            }
+
+            .text {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                padding: 30px;
+                text-align: left;
+                font-size: 20px;
+                line-height: 25px;
+                font-weight: bold;
+
+                small {
+                    font-size: 12px;
+                    font-weight: normal;
+                }
+            }
+        }
     }
 }
 
@@ -293,35 +449,3 @@ footer {
         }
     }
 }
-
-.ba-grid > [class*="ba-width-"]{
-    float: left;
-    padding-left: 20px;
-}
-
-.ba-grid{
-    margin-left: -20px;
-}
-
-.ba-grid:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.ba-grid + .ba-grid {
-    margin-top: 20px;
-}
-[class*="ba-width-"] {
-    width: 100%;
-}
-.ba-width-1-2{
-    width: 50%;
-}
-.ba-width-1-3{
-    width: 33.33333%;
-}
-.ba-width-2-3{
-    width: 66.66666%;
-}
-
