--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -275,6 +275,10 @@ section.gallery {
 
         img {
             width: 100%;
+
+            &:hover {
+                box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
+            }
         }
     }
 }
@@ -387,11 +391,15 @@ section.blog {
 
         .blog-image-wrapper {
             position: relative;
+            max-width: 370px;
             height: 305px;
+            margin: 0 auto;
             overflow: hidden;
             color: $text-color-light;
-            box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
-            background-color: #fbfbf7;
+
+            &:hover {
+                box-shadow: 0px 4px 10px rgba(0,0,0,0.5);
+            };
 
             img {
                 position: absolute;
@@ -427,8 +435,20 @@ section.blog {
                     font-weight: normal;
                 }
             }
+
+            .overlay {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(transparent 50%, black);
+                opacity: 0.9;
+            }
         }
     }
+}
+
+section.contact {
+
 }
 
 footer {
