--- a/foliac/css/style.css
+++ b/foliac/css/style.css
@@ -116,7 +116,7 @@ header ul li span {
     margin: 0 25px;
 }
 
-header button {
+header a.button-anchor {
     padding: 9px 19px;
     text-transform: uppercase;
     font-weight: bold;
@@ -125,8 +125,12 @@ header button {
     border: 2px solid #48bf72;
     border-radius: 3px;
     background-color: transparent;
+    text-decoration: none;
 }
 
+header .slide {
+    padding: 30px;
+}
 
 /**
 * Section portfolio
@@ -242,7 +246,7 @@ section.about p:last-of-type {
     font-size: 16px;
     line-height: 25px;
 }
-section.about button {
+section.about a.button-anchor {
     padding: 9px 19px;
     text-transform: uppercase;
     font-weight: bold;
@@ -251,6 +255,7 @@ section.about button {
     border: 2px solid #3c4955;
     border-radius: 3px;
     background-color: transparent;
+    text-decoration: none;
 }
 
 
