--- a/cahee/sass/main.scss
+++ b/cahee/sass/main.scss
@@ -221,8 +221,10 @@ section.services {
         h2 {
             margin-top: 0;
             margin-bottom: 80px;
+            padding: 0 10px;
             font-size: 90px;
             font-weight: bold;
+            text-align: center;
         }
     }
 }
@@ -377,13 +379,13 @@ section.blog {
     }
 
     .my-grid-container {
-        margin-bottom: 50px;
+        margin-bottom: 30px;
 
         .blog-image-wrapper {
             position: relative;
             max-width: 370px;
             height: 310px;
-            margin: 0 auto;
+            margin: 0 auto 20px;
             overflow: hidden;
             color: $text-color-light;
 
@@ -559,6 +561,87 @@ footer {
 
         &.author {
             text-align: right;
+        }
+    }
+}
+
+@media (max-width: $breakpoint-lg) {
+    $container-width: 90%;
+
+    .container {
+        width: $container-width;
+        text-align: center;
+    }
+
+    section.about {
+        background-size: 35%;
+    }
+}
+
+@media (max-width: $breakpoint-md) {
+    section.about {
+        background-image: none;
+
+        .container .content {
+            max-width: 100%;
+        }
+    }
+
+    section.services {
+        background-image: none;
+
+        .container {
+            @include flex-direction(column-reverse);
+
+            .services-buttons {
+                margin: 0;
+            }
+        }
+    }
+
+    section.subscribe {
+        background-image: none;
+        text-align: center;
+
+        p {
+            max-width: 100%;
+        }
+
+        form {
+            text-align: center;
+
+            input {
+                float: none;
+                max-width: 100%;
+            }
+
+            button {
+                float: none;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    section.blog, section.contact {
+        [class*="my-grid-cell-"] {
+            width: 100%;
+        }
+    }
+
+    section.contact {
+        form {
+            width: 100%;
+        }
+
+        address {
+            margin-left: 0;
+            margin-top: 35px;
+            text-align: center;
+            text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.86);
+
+            p {
+                color: white;
+            }
         }
     }
 }
