--- a/homepage/style.css
+++ b/homepage/style.css
@@ -3,6 +3,70 @@
     max-width: 1140px;
 }
 
+.btn-green {
+    color: white;
+    background-color: #7bedc7;
+    border-radius: 0;
+}
+
+.btn-inverse {
+    color: #7bedc7;
+    background-color: white;
+}
+
+.btn:focus, .btn:hover {
+    outline: none;
+    color: white;
+}
+
+.btn-inverse:focus, .btn-inverse:hover {
+    color: #7bedc7;
+}
+
+.img-responsive {
+    margin: 0 auto;
+}
+
+.relative {
+    position: relative;
+}
+
+.green-underline {
+    position: relative;
+    z-index: 0;
+}
+.green-underline:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -50%;
+    transform: translateY(-50%);
+    background-color: #7bedc7;
+    width: 65px;
+    height: 22px;
+    z-index: -1;
+}
+
+
+h2 {
+    display: inline-block;
+    text-transform: uppercase;
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 30px;
+    color: #60606e;
+}
+.header-container {
+    text-align: center;
+}
+.header-container p {
+    margin: 0 auto;
+    max-width: 515px;
+    font-family: "Open Sans";
+    font-size: 14px;
+    color: #60606e;
+}
+
 header {
     background: url("img/background.jpg") center bottom no-repeat;
 }
@@ -46,6 +110,26 @@ header {
     font-size: 16px;
 }
 
-.img-responsive {
-    margin: 0 auto;
+
+header .btn-absolute {
+    position: absolute;
+    bottom: 80px;
+    right: 0;
+}
+
+#portfolio .filter-menu li {
+    margin-bottom: 20px;
+}
+#portfolio .filter-menu li span {
+    display: inline-block;
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #60606e;
+    padding: 5px 15px;
+}
+#portfolio .filter-menu li.active span {
+    color: white;
+    background-color: #7bedc7;
 }
