--- a/homepage/style.css
+++ b/homepage/style.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, button, .navbar-brand {
 }
 
 .max-width {
-    max-width: 1140px;
+    max-width: 1170px;
     margin: 0 auto;
 }
 
@@ -31,7 +31,8 @@ h1, h2, h3, h4, button, .navbar-brand {
     color: white;
 }
 
-.btn-inverse:focus, .btn-inverse:hover {
+.btn-inverse:focus,
+.btn-inverse:hover {
     color: #7bedc7;
 }
 
@@ -68,12 +69,17 @@ h2 {
     display: inline-block;
     font-size: 30px;
 }
+
 .header-container {
     text-align: center;
+    padding-bottom: 100px;
+}
+.header-container h2 {
+    margin-bottom: 20px;
 }
 .header-container p {
-    margin: 0 auto 105px;
-    max-width: 515px;
+    margin: 0 auto;
+    max-width: 720px;
     font-size: 14px;
     color: #60606e;
 }
@@ -88,8 +94,18 @@ header p {
     line-height: 30px;
 }
 
-header img.margin-negative {
-    margin-bottom: -100px;
+header .img-wrapper {
+    position: relative;
+    margin: 0 auto -100px;
+    overflow: hidden;
+    height: 400px;
+    max-width: 458px;
+}
+
+header .img-wrapper img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .navbar-default {
@@ -98,7 +114,7 @@ header img.margin-negative {
 }
 
 .header-wrapper {
-    margin: 165px auto 125px;
+    margin: 147px auto 120px;
     max-width: 555px;
 }
 .header-wrapper p:first-child {
@@ -111,7 +127,7 @@ header img.margin-negative {
 
 .header-wrapper h1 {
     font-size: 48px;
-    margin: 0 0 30px;
+    margin: 0 0 20px;
     padding: 14px 0;
     border: 10px solid #60606e;
 }
@@ -122,20 +138,25 @@ header img.margin-negative {
 }
 
 
-header .btn-absolute {
-    position: absolute;
-    bottom: -25px;
-    right: 0;
+header .btn-wrapper{
+    margin-top: 22px;
+    margin-bottom: -25px;
+    text-align: right;
 }
 
 #chooseUs {
-    padding-top: 145px;
+    padding-top: 220px;
 }
-
+#chooseUs .column-wrapper {
+    display: inline-block;
+    text-align: left;
+}
 #chooseUs i {
     font-size: 36px;
 }
-
+#chooseUs ul {
+    margin-bottom: 45px;
+}
 #chooseUs li {
     color: #999;
     text-transform: uppercase;
@@ -144,25 +165,42 @@ header .btn-absolute {
 }
 
 #portfolio {
-    padding: 150px 0;
+    padding: 115px 0 125px;
+}
+#portfolio .wrapper {
+    padding-left: 10px;
+}
+#portfolio h3 {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 30px;
+    line-height: 48px;
 }
 
 #portfolio .filter-menu li {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
-#portfolio .filter-menu li span {
+#portfolio .filter-menu li a {
     display: inline-block;
     font-size: 14px;
     text-transform: uppercase;
     padding: 5px 15px;
 }
-#portfolio .filter-menu li.active span {
+#portfolio .filter-menu li.active a {
     color: white;
     background-color: #7bedc7;
 }
 
+#portfolio .grid-sizer,
+#portfolio .grid-item {
+    width: calc(33% - 15px);
+}
+#portfolio .grid-item {
+    padding-bottom: 30px;
+}
+
 #contact {
-    padding: 50px 0;
+    padding: 20px 0 50px;
     background-color: #7bedc7;
 }
 
@@ -171,13 +209,19 @@ header .btn-absolute {
 }
 
 #contact h3 {
+    margin-bottom: 5px;
     font-size: 24px;
     line-height: 1.5;
+    max-width: 400px;
+}
+#contact p {
+    margin-bottom: 30px;
 }
 
 #contact .white-bg {
+    margin-top: 25px;
     background-color: white;
-    padding: 20px 15px;
+    padding: 1px 25px 20px;
 }
 
 #contact .form-control {
@@ -185,7 +229,7 @@ header .btn-absolute {
 }
 
 footer {
-    padding-top: 50px;
+    padding-top: 45px;
     padding-bottom: 50px;
     color: #9a9a9a;
     text-transform: uppercase;
@@ -216,4 +260,44 @@ footer .bottom-menu li:last-of-type:after {
 
 footer i {
     font-size: 18px;
+}
+
+footer p.created {
+    text-align: right;
+}
+
+@media all and (max-width:991px) {
+    header .img-wrapper {
+        margin-bottom: 10px;
+    }
+
+    header h2 {
+        text-align: center;
+    }
+
+    header .btn-wrapper{
+        text-align: center;
+    }
+}
+
+@media all and (max-width: 767px) {
+    #chooseUs .text-xs-center {
+        text-align: center;
+    }
+
+    #chooseUs .column-wrapper {
+        text-align: center;
+    }
+
+    #portfolio .filter-menu li {
+        display: inline-block;
+    }
+    
+    footer .bottom-menu {
+        text-align: center;
+    }
+
+    footer p.created {
+        text-align: center;
+    }
 }
